Fix arrow spacing in edit modal

--- a/web/src/app/area/edit-modal/edit-modal.component.scss
+++ b/web/src/app/area/edit-modal/edit-modal.component.scss
@@ -1,3 +1,4 @@
 .action-to-reaction-arrow {
     height: 32px;
+    padding-bottom: 22px;
 }
